fix dark mode styles on projectcard

--- a/src/sections/Projects/components/ProjectCard.module.scss
+++ b/src/sections/Projects/components/ProjectCard.module.scss
@@ -154,5 +154,9 @@
 		.infoColumn .linkGroup .link:hover {
 			color: $d-lightest;
 		}
+
+		.tools {
+			background-color: #41414f;
+		}
 	}
 }
